@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-12693.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-12771.tgz',
      'xapian-core.tgz',
-     '5ec73c6f41c58326b1bf98667497e3b52a020b5d',
+     '37b7ebc82103d69204d6ad2ac3ed28532adae033',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-12693.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-12771.tgz',
      'xapian-bindings.tgz',
-     'e6fbe6ee885d5d0e2adcc84ac9a97842f1a143a3',
+     '6b0d1cb23e03a5ba9df4816bf1d9e18507d8a318',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-12693.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-12771.tgz',
      'win32msvc.tgz',
-     'b53924609062d0b3c9535c9288af6dce53647075',
+     '191a3d628fc01d87fc813f98dd1d09d52a35fdcc',
      'xapian-core/win32',
     ),
     ('Xapian extras',
