@@ -1,3 +1,7 @@
+Thu May 21 06:39:33 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/build_xapian.sh,libs/get_xapian.py: Update xapian packages.
+
 Thu May 14 19:18:52 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/datastructures.py: Fallback to importing sha instead of
